tests/baselines/reference/parserMissingToken2.errors.txt
==== tests/cases/compiler/parserMissingToken2.ts (2 errors) ====
    / b;
    ~
!!! parserMissingToken2.ts(1,1): error TS1003: Identifier expected.
      ~
!!! parserMissingToken2.ts(1,3): error TS2095: Cannot find name 'b'.